--- a/Src/Clide.VisualStudio/Clide.VisualStudio.csproj
+++ b/Src/Clide.VisualStudio/Clide.VisualStudio.csproj
@@ -47,6 +47,7 @@
     <ProjectReference Include="..\Clide\Clide.csproj">
       <Project>{eaf59c6d-a973-48e6-a90a-5e894ecec3f6}</Project>
       <Name>Clide</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
@@ -56,10 +57,4 @@
   </PropertyGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\Clide.targets" />
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
-  <Target Name="AfterBuild" Condition="$(NuGet) == 'true'">
-    <!-- Copy spec file and sources to destination as needed -->
-    <Copy SourceFiles="Clide.VisualStudio.nuspec" DestinationFolder="nuget" ContinueOnError="false" />
-    <Copy SourceFiles="@(SymbolSource)" DestinationFiles="@(SymbolSource->'nuget\src\%(RecursiveDir)%(Filename)%(Extension)')" ContinueOnError="false" SkipUnchangedFiles="true" OverwriteReadOnlyFiles="true" />
-  </Target>
 </Project>
