--- a/Src/Clide.XamarinStudio/Clide.XamarinStudio.nuspec
+++ b/Src/Clide.XamarinStudio/Clide.XamarinStudio.nuspec
@@ -78,10 +78,11 @@ v1.0
         <copyright>Copyright 2012</copyright>
         <tags>visualstudio vsx extensibility</tags>
         <dependencies>
-            <dependency id="Autofac" version="3" />
-            <dependency id="Autofac.Extras.Attributed" version="3" />
-            <dependency id="Autofac.Extras.CommonServiceLocator" version="3" />
-            <dependency id="CommonServiceLocator" version="1" />
+            <dependency id="Autofac" version="3.0" />
+            <dependency id="Autofac.Mef" version="3.0" />
+            <dependency id="Autofac.Extras.Attributed" version="3.0" />
+            <dependency id="Autofac.Extras.CommonServiceLocator" version="3.0" />
+            <dependency id="CommonServiceLocator" version="1.0" />
         </dependencies>
     </metadata>
 </package>
