Updated to the latest version of Autofac Extras
Supports metadata filters out of the box (so we can remove our autofac extensions).
Updated all packages.

--- a/Src/Clide.Common/Clide.Common.csproj
+++ b/Src/Clide.Common/Clide.Common.csproj
@@ -41,13 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Src\GlobalAssemblyInfo.cs">
+    <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Common\ClariusLabs.licenseheader">
+    <None Include="..\..\Common\ClariusLabs.licenseheader">
       <Link>ClariusLabs.licenseheader</Link>
     </None>
   </ItemGroup>
