--- a/Src/Clide.VisualStudio/Clide.VisualStudio.csproj
+++ b/Src/Clide.VisualStudio/Clide.VisualStudio.csproj
@@ -36,7 +36,7 @@
     <NuSpec Include="Clide.VisualStudio.nuspec" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Clide.Common\Clide.Common.csproj">
+    <ProjectReference Include="..\Clide.Common\Clide.Common.csproj">
       <Project>{15bb76c4-c6d8-4d51-8276-fb7a94aae377}</Project>
       <Name>Clide.Common</Name>
     </ProjectReference>
