--- a/Src/UnitTests/UnitTests.csproj
+++ b/Src/UnitTests/UnitTests.csproj
@@ -75,8 +75,10 @@
   <ItemGroup>
     <Compile Include="CommandManagerSpec.cs" />
     <Compile Include="CompositionSpec.cs" />
+    <Compile Include="FakeSolutionExplorer.cs" />
     <Compile Include="Misc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Solution\ISolutionNodeExtensionsSpec.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Common\ClariusLabs.licenseheader">
