Added asynchrous build and retrieve output assemblies

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Src\Clide\packages.config" />
+  <repository path="..\Src\IntegrationPackage\packages.config" />
   <repository path="..\Src\IntegrationTests\packages.config" />
   <repository path="..\Src\UnitTests\packages.config" />
 </repositories>
