--- a/Src/Clide/packages.config
+++ b/Src/Clide/packages.config
@@ -9,6 +9,9 @@
   <package id="Autofac.Extras.CommonServiceLocator" version="3.0.1" targetFramework="net40" />
   <package id="Autofac.Mef" version="3.0.2" targetFramework="net40" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
+  <package id="Microsoft.Bcl" version="1.0.19" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Async" version="1.0.165" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Build" version="1.0.13" targetFramework="net40" />
   <package id="netfx-Guard" version="1.3.3.2" targetFramework="net40" />
   <package id="netfx-Reflector" version="1.0.0.10" targetFramework="net40" />
   <package id="netfx-System.AmbientSingleton" version="1.2.1.0" targetFramework="net40" />
