--- a/Src/UnitTests/packages.config
+++ b/Src/UnitTests/packages.config
@@ -4,6 +4,9 @@
   <package id="Autofac.Extras.Attributed" version="3.1.0" targetFramework="net40" />
   <package id="Autofac.Extras.CommonServiceLocator" version="3.0.1" targetFramework="net40" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
-  <package id="Moq" version="4.1.1309.1617" targetFramework="net40" />
+  <package id="Microsoft.Bcl" version="1.0.19" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Async" version="1.0.165" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Build" version="1.0.13" targetFramework="net40" />
+  <package id="Moq" version="4.1.1311.0615" targetFramework="net40" />
   <package id="xunit" version="1.9.2" targetFramework="net40" />
 </packages>
