Fixed reference to intellisense assembly for vs2012 and vs2013 Added unit test for fixed fallback service locator behavior when primary fails.

--- a/Src/UnitTests/UnitTests.csproj
+++ b/Src/UnitTests/UnitTests.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="CommandManagerSpec.cs" />
     <Compile Include="CompositionSpec.cs" />
+    <Compile Include="Composition\FallbackServiceLocatorSpec.cs" />
     <Compile Include="FakeSolutionExplorer.cs" />
     <Compile Include="Misc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
