--- a/Src/UnitTests/UnitTests.csproj
+++ b/Src/UnitTests/UnitTests.csproj
@@ -46,6 +46,7 @@
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.VisualStudio.OLE.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.VisualStudio.Shell.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Moq">
       <HintPath>..\..\packages\Moq.4.1.1311.0615\lib\net40\Moq.dll</HintPath>
@@ -70,6 +71,7 @@
   <ItemGroup>
     <Compile Include="CommandManagerSpec.cs" />
     <Compile Include="Composition\FallbackServiceLocatorSpec.cs" />
+    <Compile Include="Extensions\ServiceProviderExtensionsSpec.cs" />
     <Compile Include="FakeSolutionExplorer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Solution\ISolutionNodeExtensionsSpec.cs" />
