--- a/Src/Clide.targets
+++ b/Src/Clide.targets
@@ -45,6 +45,7 @@
     </Target>-->
 
     <Target Name="BuildPackage" AfterTargets="AfterBuild" Condition="$(NuGet) == 'true'">
+        <MakeDir Directories="$(DropDirectory.TrimEnd('\'))" Condition="!Exists($(DropDirectory.TrimEnd('\')))" />
         <Copy SourceFiles="@(NuSpec)" DestinationFiles="@(NuSpec->'nuget\%(Filename)%(Extension)')" SkipUnchangedFiles="true" ContinueOnError="false">
             <Output TaskParameter="DestinationFiles" ItemName="NuSpecOut" />
         </Copy>
