--- a/Src/Clide.props
+++ b/Src/Clide.props
@@ -27,6 +27,27 @@
         <DefineConstants>$(DefineConstants);DEBUG;TRACE</DefineConstants>
     </PropertyGroup>
 
+    <!-- On build servers and command line, this property is not available, so we redefine it in 
+             terms of the environment variables created by VS when installed -->
+    <PropertyGroup Condition="'$(DevEnvDir)' == ''">
+        <VSCommToolsVar>VS$(VisualStudioVersion.Replace('.', ''))COMNTOOLS</VSCommToolsVar>
+        <DevEnvDir>$([System.Environment]::ExpandEnvironmentVariables('%$(VSCommToolsVar)%'))..\IDE\</DevEnvDir>
+
+        <!-- VSSDK -->
+        <VSSDKVar>VSSDK$(VisualStudioVersion.Replace('.', ''))Install</VSSDKVar>
+        <SdkDir>$([System.Environment]::ExpandEnvironmentVariables('%$(VSSDKVar)%'))</SdkDir>
+        <SdkLib>$(SdkDir)VisualStudioIntegration\Common\Assemblies\v4.0\</SdkLib>
+    </PropertyGroup>
+
+    <!-- This is the property that causes VS 2012+ to insist on one-way update of the project -->
+    <PropertyGroup Condition="'$(VisualStudioVersion)' &gt;= '11.0'">
+        <MinimumVisualStudioVersion>$(VisualStudioVersion)</MinimumVisualStudioVersion>
+    </PropertyGroup>
+    <!-- This is the property that causes VS 2013 to insist on one-way update of the project -->
+    <PropertyGroup Condition="'$(VisualStudioVersion)' &gt;= '12.0'">
+        <OldToolsVersion>4.0</OldToolsVersion>
+    </PropertyGroup>
+
     <PropertyGroup Condition="'$(VisualStudioVersion)' == ''">
         <VisualStudioVersion>10.0</VisualStudioVersion>
         <VSToolsPath>$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
