--- a/Src/IntegrationTests/IntegrationTests.csproj
+++ b/Src/IntegrationTests/IntegrationTests.csproj
@@ -95,6 +95,7 @@
     <Content Include="Content\SampleSolution\ClassLibrary\Properties\AssemblyInfo.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Compile Include="ErrorsManagerSpec.cs" />
     <Compile Include="DevEnvSpec.cs" />
     <Compile Include="DialogWindowFactorySpec.cs" />
     <Compile Include="Extensions\VsHierarchyExtensionsSpec.cs" />
