Updated Tracer to latest version, which supports XML output

--- a/Src/Clide/Clide.csproj
+++ b/Src/Clide/Clide.csproj
@@ -98,16 +98,16 @@
     <Compile Include="Composition\FallbackServiceLocator.cs" />
     <Compile Include="Composition\ExportsServiceLocator.cs" />
     <Compile Include="Composition\ServicesExportProvider.cs" />
+    <Compile Include="External\Diagnostics\Tracer\ITracer.cs" />
+    <Compile Include="External\Diagnostics\Tracer\ITracerExtensions.cs" />
+    <Compile Include="External\Diagnostics\Tracer\ITracerManager.cs" />
+    <Compile Include="External\Diagnostics\Tracer\StartActivityExtension.cs" />
+    <Compile Include="External\Diagnostics\Tracer\Tracer.cs" />
+    <Compile Include="External\Diagnostics\Tracer\TracerManager.cs" />
+    <Compile Include="External\Diagnostics\Tracer\Visibility.cs" />
     <Compile Include="IErrorItem.cs" />
-    <Compile Include="Diagnostics\Tracer\ITracer.cs" />
-    <Compile Include="Diagnostics\Tracer\ITracerExtensions.cs" />
-    <Compile Include="Diagnostics\Tracer\ITracerManager.cs" />
-    <Compile Include="Diagnostics\Tracer\StartActivityExtension.cs" />
-    <Compile Include="Diagnostics\Tracer\Tracer.cs" />
-    <Compile Include="Diagnostics\Tracer\Visibility.cs" />
     <Compile Include="Diagnostics\Visibility.cs" />
     <Compile Include="Diagnostics\ITracerManager.cs" />
-    <Compile Include="Diagnostics\Tracer\TracerManager.cs" />
     <Compile Include="Diagnostics\Tracer.cs" />
     <Compile Include="ErrorItem.cs" />
     <Compile Include="ErrorsManager.cs" />
