Added IOutputWindowManager to allow easy configuration of output window panes. Cleaned up Host so that the responsibility of configuring tracing belongs now to the caller. Host.Initialize now returns the IDevEnv that has been initialized, for further use. A new TextTraceListener.cs was created that allows very simple text to be written to the output pane.

--- a/Src/Clide.props
+++ b/Src/Clide.props
@@ -19,12 +19,12 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-        <DefineConstants>$(DefineConstants);DEBUG</DefineConstants>
+        <DefineConstants>$(DefineConstants);DEBUG;TRACE</DefineConstants>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-        <DefineConstants>$(DefineConstants);DEBUG;TRACE</DefineConstants>
+        <DefineConstants>$(DefineConstants);TRACE</DefineConstants>
     </PropertyGroup>
 
     <!-- On build servers and command line, this property is not available, so we redefine it in 
