--- a/Src/IntegrationTests/IntegrationTests.csproj
+++ b/Src/IntegrationTests/IntegrationTests.csproj
@@ -106,6 +106,7 @@
     <Compile Include="MessageBoxServiceSpec.cs" />
     <Compile Include="Misc.cs" />
     <Compile Include="netfx\Testing\Assertions.cs" />
+    <Compile Include="OutputWindowManagerSpec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceLocatorSpec.cs" />
     <Compile Include="SettingsIntegrationSpec.cs" />
