Added support for per-user and per-configuration dynamic properties
Added significant code coverage on this area too.
Took the change to add meaninful test report too.

--- a/Src/Clide.props
+++ b/Src/Clide.props
@@ -18,7 +18,11 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
 
-    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+	<PropertyGroup>
+		<TextTransformExe>$(CommonProgramFiles)\Microsoft Shared\TextTemplating\$(VisualStudioVersion)\TextTransform.exe</TextTransformExe>
+	</PropertyGroup>
+
+	<PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
         <DefineConstants>$(DefineConstants);DEBUG;TRACE</DefineConstants>
     </PropertyGroup>
 
@@ -70,5 +74,9 @@
         <AvailableItemName Include="NuSpec">
             <Visible>False</Visible>
         </AvailableItemName>
-    </ItemGroup>
+
+		<AvailableItemName Include="TestReport">
+			<Visible>False</Visible>
+		</AvailableItemName>
+	</ItemGroup>
 </Project>
